--- a/BluetoothDetection/BluetoothDetection/Info.plist
+++ b/BluetoothDetection/BluetoothDetection/Info.plist
@@ -29,6 +29,10 @@
 		<string>bluetooth-central</string>
 		<string>bluetooth-peripheral</string>
 	</array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key><true/>
+    </dict>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
